# ums

./: .coveragerc  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/: dependabot.yaml
.github/actions/pre-test/: action.yaml
.github/actions/test/: action.yaml  run.sh
.github/workflows/: build.yaml  ci.yaml  pre-test.yaml  pre-tests.yaml  publish.yaml  test.yaml  tests.yaml
db/: init_db.py
docker/: Dockerfile  docker-compose.dev.yaml  ums-test.yaml
docs/: tech.md
scripts/: check.sh  dev.sh  test_db.sh
tests/: fixtures.py  original_fixtures.py
tests/api/v1/: test_auth.py  test_status.py  test_user.py
tests/crud/: test_base.py  test_group.py  test_user.py
tests/data_access/: test_writer.py
tests/fixtures/: db.py  domain.py  original_fixtures.py
tests/ums/crud/: test_base.py  test_group.py  test_user.py
tests/ums/data_access/: test_reader_writer.py
ums/: __init__.py  main.py  models.py
ums/api/: app_factory.py  auth.py  exceptions.py
ums/api/middlewares/: filter_sort.py
ums/core/: app_factory.py  exceptions.py  filter_sort.py  security.py
ums/core/data_access/: interfaces.py  reader.py  writer.py
ums/core/db/: async_session.py
ums/core/service/: domain.py  interfaces.py
ums/core/utils/: security.py
ums/crud/: base.py  validator.py
ums/crud/group/: repository.py  schemas.py  validation.py
ums/crud/permissions/: repository.py
ums/crud/role/: repository.py
ums/crud/user/: repository.py  schemas.py  validation.py
ums/data_access/: interfaces.py  reader.py  writer.py
ums/db/: async_connection.py  async_session.py  session.py
ums/domain/: _test_service.py  entities.py  exceptions.py
ums/domain/data_access/: interfaces.py  reader.py  writer.py
ums/domain/group/: get_members.py  reader.py  schemas.py  service.py  validator.py  writer.py
ums/domain/permissions/: _test_permissions.py  reader.py  repository.py  schemas.py  (+3 more)
ums/middlewares/: filter_sort.py
ums/settings/: api.py  application.py  postgres.py  security.py
ums/utils/: password_generator.py
(+36 files in other folders)
