[tool.poetry]
name = "ums"
version = "0.3.0"
description = "A general purpose user management system (UMS)"
authors = ["Victor Sandoval <vs.software.eng@gmail.com>"]

packages = [
    {include = "ums"},
]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = {extras = ["email"], version = "^2.4.2"}
numpy = "^1.26.1"
loguru = "^0.7.2"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.7"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.15"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0.post1"
bcrypt = "^4.1.3"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.13"
coverage = "^7.3.4"
httpx = "^0.26.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pyright = "^1.1.393"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
